--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cookie-pusher",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"description": "Cookie-aware HTTP client based on axios and tough-cookie",
 	"keywords": [
 		"cookie",
@@ -17,6 +17,7 @@
 		"node": "^14.13.1"
 	},
 	"main": ".dist/index.js",
+	"types": ".dist/index.d.ts",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
